Added content to index.html

--- a/index.html
+++ b/index.html
@@ -1,53 +1,112 @@
 <!doctype html>
 <html class="no-js" lang="">
 
-<head>
-  <meta charset="utf-8">
-  <title>Unplugged</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <title>Unplugged</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+    <meta property="og:title" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
-</head>
+    <meta name="theme-color" content="#fafafa">
+  </head>
 
-<body>
+  <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+    <header>
+      <div>
+        <a href="#"><img src="" alt="unplugged logo"></a>
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" rel="noopener">FAQ</a></li>
+          <li><a href="about/index.html" rel="noopener">About</a></li>
+        </ul>
+      </nav>
+
+    </header>
+
+    <main>
+      <section class="hero-area">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </section>
+
+
+      <aside>
+        <section class="content-wrapper">
+          <div class="form-description">
+            <h3>Want to join the next retreat?</h3>
+            <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+          </div><!-- form description ends-->
+
+          <div class="form">
+            <h3>Find out more</h3>
+            <input type="text" name="name" value="name@email.com">
+            <input type="button" value="Download Itinerary">
+          </div><!-- form ends -->
+        </section><!-- aside content wrapper ends -->
+      </aside>
+
+
+
+    </main><!-- main wrapper -->
+
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-contact">
+          <div class="contact">
+            <h4>Contact</h4>
+            <address>
+              <a href="tel:+15555555555">(555) 555-5555</a>
+              <a href="malito:hello@unplugged.com">hello@unplugged.com</a>
+            </address>
+          </div>
+
+          <div class="social">
+            <h4>Social</h4>
+            <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener">Fb</a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener">Tw</a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener">IG</a></p>
+          </div>
+
+        </div><!-- footer contact info ends here -->
+
+        <div class="copyright">
+          <p>Copyright 2023 | Unplugged</p>
+        </div>
+
+      </div><!-- footer content-wrapper ends -->
+
+    </footer>
 
 
 
 
 
 
+    <!-- Javascript links -->
+    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 
-
-
-
-
-<!-- Javascript links -->
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
+  </body>
 
 </html>
