--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
   <body>
 
     <header>
-      <div>
+      <div class="content-wrapper">
         <a href="#"><img src="" alt="unplugged logo"></a>
-      </div>
 
-      <nav>
-        <ul>
-          <li><a href="faq/index.html" rel="noopener">FAQ</a></li>
-          <li><a href="about/index.html" rel="noopener">About</a></li>
-        </ul>
-      </nav>
+        <div class="header-divider"></div>
 
+        <nav>
+          <ul>
+            <li><a href="faq/index.html" rel="noopener">FAQ</a></li>
+            <li><a href="about/index.html" rel="noopener">About</a></li>
+          </ul>
+        </nav>
+
+      </div><!-- header content wrapper ends -->
     </header>
 
     <main>
@@ -59,13 +61,64 @@
         </section><!-- aside content wrapper ends -->
       </aside>
 
+      <section class="features">
+        <div class="content-wrapper">
+          <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
+              breakout rooms.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team
+              kitchen.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from
+              bungalow.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get
+              a chance to reset.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+          </article>
 
+        </div><!-- features content wrapper ends -->
+      </section>
 
-    </main><!-- main wrapper -->
+      <section class="reviews">
+        <div class="content-wrapper">
+          <h2>Be a better team in 5 days, like this one.</h2>
+
+          <article>
+            <h3>LaCrue Bottling Co. October 2018
+            </h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna
+              aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis
+              aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </article>
+
+        </div><!-- reviews content wrapper ends -->
+      </section>
+
+    </main><!-- main wrapper ends -->
 
     <footer>
       <div class="content-wrapper">
         <div class="footer-contact">
+
           <div class="contact">
             <h4>Contact</h4>
             <address>
@@ -76,9 +129,11 @@
 
           <div class="social">
             <h4>Social</h4>
-            <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener">Fb</a></p>
-            <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener">Tw</a></p>
-            <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener">IG</a></p>
+            <div class="social-icons">
+              <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener">Fb</a></p>
+              <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener">Tw</a></p>
+              <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener">IG</a></p>
+            </div>
           </div>
 
         </div><!-- footer contact info ends here -->
