--- a/about/index.html
+++ b/about/index.html
@@ -24,8 +24,21 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+  
+      <div class="header-divider"></div>
+  
+      <nav>
+        <ul>
+          <li><a href="../faq/index.html" rel="noopener">FAQ</a></li>
+          <li><a href="#" rel="noopener">About</a></li>
+        </ul>
+      </nav>
+  
+    </div><!-- header content wrapper ends -->
+  </header>
 
 
 
@@ -33,6 +46,36 @@
 
 
 
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-contact">
+
+      <div class="contact">
+        <h4>Contact</h4>
+        <address>
+          <a href="tel:+15555555555">(555) 555-5555</a>
+          <a href="malito:hello@unplugged.com">hello@unplugged.com</a>
+        </address>
+      </div>
+
+      <div class="social">
+        <h4>Social</h4>
+        <div class="social-icons">
+          <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener">Fb</a></p>
+          <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener">Tw</a></p>
+          <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener">IG</a></p>
+        </div>
+      </div>
+
+    </div><!-- footer contact info ends here -->
+
+    <div class="copyright">
+      <p>Copyright 2023 | Unplugged</p>
+    </div>
+
+  </div><!-- footer content-wrapper ends -->
+
+</footer>
 
 
 
