Finished adding content to about page

--- a/about/index.html
+++ b/about/index.html
@@ -1,96 +1,140 @@
 <!doctype html>
 <html class="no-js" lang="">
 
-<head>
-  <meta charset="utf-8">
-  <title>About | Unplugged</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <title>About | Unplugged</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+    <meta property="og:title" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
 
-  <link rel="manifest" href="../site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="manifest" href="../site.webmanifest">
+    <link rel="apple-touch-icon" href="../icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
-</head>
+    <meta name="theme-color" content="#fafafa">
+  </head>
 
-<body>
+  <body>
 
-  <header>
-    <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
-  
-      <div class="header-divider"></div>
-  
-      <nav>
-        <ul>
-          <li><a href="../faq/index.html" rel="noopener">FAQ</a></li>
-          <li><a href="#" rel="noopener">About</a></li>
-        </ul>
-      </nav>
-  
-    </div><!-- header content wrapper ends -->
-  </header>
+    <header>
+      <div class="content-wrapper">
+        <a href="#"><img src="" alt="unplugged logo"></a>
 
+        <div class="header-divider"></div>
 
+        <nav>
+          <ul>
+            <li><a href="../faq/index.html" rel="noopener">FAQ</a></li>
+            <li><a href="#" rel="noopener">About</a></li>
+          </ul>
+        </nav>
 
+      </div><!-- header content wrapper ends -->
+    </header>
 
+    <main>
+      <section class="mission">
+        <div class="content-wrapper">
+          <div class="mission-content">
+            <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna
+              aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+              facilisis.
 
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna
+              aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
+              facilisis.
+            </p>
+          </div>
+        </div> <!-- mission content wrapper ends -->
+      </section>
+    </main>
 
+    <section class="google-map">
+      <figure></figure>
+    </section>
 
-<footer>
-  <div class="content-wrapper">
-    <div class="footer-contact">
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
 
-      <div class="contact">
-        <h4>Contact</h4>
+        <div class="contact-content">
+          <address>
+            <h4>General Information</h4>
+            <p>333 Main St, Lake Geneva, WI 53147<br>
+              555-555-5555<br>
+              hello@unplugged.com</p>
+          </address>
+        </div>
+
         <address>
-          <a href="tel:+15555555555">(555) 555-5555</a>
-          <a href="malito:hello@unplugged.com">hello@unplugged.com</a>
+          <h4>Chat with a Facilitator</h4>
+          <p>555-555-5556<br>
+            facilitator@unplugged.com</p>
         </address>
       </div>
 
-      <div class="social">
-        <h4>Social</h4>
-        <div class="social-icons">
-          <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener">Fb</a></p>
-          <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener">Tw</a></p>
-          <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener">IG</a></p>
-        </div>
       </div>
-
-    </div><!-- footer contact info ends here -->
-
-    <div class="copyright">
-      <p>Copyright 2023 | Unplugged</p>
-    </div>
-
-  </div><!-- footer content-wrapper ends -->
-
-</footer>
+      </div><!-- contact content wrapper ends -->
+    </section>
 
 
 
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-contact">
 
-  <!-- Javascript links -->
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
+          <div class="contact">
+            <h4>Contact</h4>
+            <address>
+              <a href="tel:+15555555555">(555) 555-5555</a>
+              <a href="malito:hello@unplugged.com">hello@unplugged.com</a>
+            </address>
+          </div>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener">Fb</a></p>
+              <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener">Tw</a></p>
+              <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener">IG</a></p>
+            </div>
+          </div>
+
+        </div><!-- footer contact info ends here -->
+
+        <div class="copyright">
+          <p>Copyright 2023 | Unplugged</p>
+        </div>
+
+      </div><!-- footer content-wrapper ends -->
+
+    </footer>
+
+
+
+
+    <!-- Javascript links -->
+    <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/main.js"></script>
+
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
+  </body>
 
 </html>
