--- a/faq/index.html
+++ b/faq/index.html
@@ -1,53 +1,129 @@
 <!doctype html>
 <html class="no-js" lang="">
 
-<head>
-  <meta charset="utf-8">
-  <title>Frequently Asked Questions | Unplugged</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <title>Frequently Asked Questions | Unplugged</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+    <meta property="og:title" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
 
-  <link rel="manifest" href="../site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="manifest" href="../site.webmanifest">
+    <link rel="apple-touch-icon" href="../icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
-</head>
+    <meta name="theme-color" content="#fafafa">
+  </head>
 
-<body>
-
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <body>
 
 
+    <header>
+      <div class="content-wrapper">
+        <a href="#"><img src="" alt="unplugged logo"></a>
+
+        <div class="header-divider"></div>
+
+        <nav>
+          <ul>
+            <li><a href="#" rel="noopener">FAQ</a></li>
+            <li><a href="../about/index.html" rel="noopener">About</a></li>
+          </ul>
+        </nav>
+
+      </div><!-- header content wrapper ends -->
+    </header>
+
+    <main class="faq">
+      <div class="content-wrapper">
+        <h2>Frequently Asked Questions</h2>
+
+        <div class="faq-content">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna
+            aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+        </div>
+
+        <div class="faq-content">
+          <h4>What kind of team is right for the Unplugged retreat?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna
+            aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+        </div>
+
+        <div class="faq-content">
+          <h4>What size teams can you accommodate?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna
+            aliqua.</p>
+        </div>
+
+        <div class="faq-content">
+          <h4>Is there really no wifi available?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna
+            aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+        </div>
+      </div><!-- faq content wrapper ends -->
+
+    </main>
 
 
 
 
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-contact">
+
+          <div class="contact">
+            <h4>Contact</h4>
+            <address>
+              <a href="tel:+15555555555">(555) 555-5555</a>
+              <a href="malito:hello@unplugged.com">hello@unplugged.com</a>
+            </address>
+          </div>
+
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener">Fb</a></p>
+              <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener">Tw</a></p>
+              <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener">IG</a></p>
+            </div>
+          </div>
+
+        </div><!-- footer contact info ends here -->
+
+        <div class="copyright">
+          <p>Copyright 2023 | Unplugged</p>
+        </div>
+
+      </div><!-- footer content-wrapper ends -->
+
+    </footer>
 
 
 
 
+    <!-- Javascript links -->
+    <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/main.js"></script>
 
-  <!-- Javascript links -->
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
+  </body>
 
 </html>
