More changes to make the site responsive

--- a/about/index.html
+++ b/about/index.html
@@ -61,30 +61,29 @@
     </main>
 
     <section class="google-map">
-      <figure></figure>
+      <div class="content-wrapper">
+        <figure></figure>
+      </div>
     </section>
 
     <section class="contact-section">
       <div class="content-wrapper">
         <h2>Contact us, because you all need this.</h2>
 
-        <div class="contact-content">
-          <address>
-            <h4>General Information</h4>
-            <p>333 Main St, Lake Geneva, WI 53147<br>
-              555-555-5555<br>
-              hello@unplugged.com</p>
-          </address>
-        </div>
+        <address>
+          <h4>General Information</h4>
+          <p>333 Main St, Lake Geneva, WI 53147<br>
+            555-555-5555<br>
+            hello@unplugged.com</p>
+        </address>
+
 
         <address>
           <h4>Chat with a Facilitator</h4>
           <p>555-555-5556<br>
             facilitator@unplugged.com</p>
         </address>
-      </div>
 
-      </div>
       </div><!-- contact content wrapper ends -->
     </section>
 
@@ -114,7 +113,7 @@
         </div><!-- footer contact info ends here -->
 
         <div class="copyright">
-          <p>Copyright 2023 | Unplugged</p>
+          <p>&copy 2023 | Unplugged</p>
         </div>
 
       </div><!-- footer content-wrapper ends -->
