--- a/faq/index.html
+++ b/faq/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="faq-content">
-          <h4>Is there really no wifi available?</h4>
+          <h4>Is there really no WIFI available?</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna
             aliqua. Quis ipsum suspendisse ultrices gravida.</p>
@@ -103,7 +103,7 @@
         </div><!-- footer contact info ends here -->
 
         <div class="copyright">
-          <p>Copyright 2023 | Unplugged</p>
+          <p>&copy 2023 | Unplugged</p>
         </div>
 
       </div><!-- footer content-wrapper ends -->
