--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <header>
       <div class="content-wrapper">
-        <a href="#"><img src="" alt="unplugged logo"></a>
+        <figure><a href="#"><img src="" alt="unplugged logo"></a></figure>
 
         <div class="header-divider"></div>
 
@@ -42,12 +42,14 @@
 
     <main>
       <section class="hero-area">
-        <h1>Retreat from the desk, return refreshed.</h1>
+        <div class="content-wrapper">
+          <h1>Retreat from the desk, return refreshed.</h1>
+        </div>
       </section>
 
 
       <aside>
-        <section class="content-wrapper">
+        <div class="content-wrapper">
           <div class="form-description">
             <h3>Want to join the next retreat?</h3>
             <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
@@ -58,37 +60,45 @@
             <input type="text" name="name" value="name@email.com">
             <input type="button" value="Download Itinerary">
           </div><!-- form ends -->
-        </section><!-- aside content wrapper ends -->
+        </div><!-- aside content wrapper ends -->
       </aside>
 
       <section class="features">
         <div class="content-wrapper">
           <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
-          <article>
+
+          <article class="features-items">
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
           </article>
-          <article>
+
+          <article class="features-items">
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
               breakout rooms.</p>
           </article>
-          <article>
+
+          <article class="features-items">
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">Private chef team providing on demand meals - just like your team
               kitchen.</p>
           </article>
-          <article>
+
+          <article class="features-items">
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from
               bungalow.</p>
           </article>
-          <article>
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get
-              a chance to reset.</p>
+
+          <article class="features-items">
+            <div class="features-items">
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all
+                get
+                a chance to reset.</p>
           </article>
-          <article>
+
+          <article class="features-items">
             <p class="fontawesome-icon"></p>
             <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
           </article>
@@ -122,7 +132,7 @@
           <div class="contact">
             <h4>Contact</h4>
             <address>
-              <a href="tel:+15555555555">(555) 555-5555</a>
+              <a href="tel:+15555555555">(555) 555-5555</a><br>
               <a href="malito:hello@unplugged.com">hello@unplugged.com</a>
             </address>
           </div>
@@ -139,7 +149,7 @@
         </div><!-- footer contact info ends here -->
 
         <div class="copyright">
-          <p>Copyright 2023 | Unplugged</p>
+          <p>&copy 2023 | Unplugged</p>
         </div>
 
       </div><!-- footer content-wrapper ends -->
