Corrected layout and updated css to add tablet styles

--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
 
           <div class="form">
             <h3>Find out more</h3>
-            <input type="text" name="name" value="name@email.com">
-            <input type="button" value="Download Itinerary">
+
+            <form name="input" action="" method="get">
+              <input type="text" name="name" value="name@email.com">
+              <input type="button" value="Download Itinerary">
+            </form>
+
           </div><!-- form ends -->
         </div><!-- aside content wrapper ends -->
       </aside>
@@ -67,41 +71,52 @@
         <div class="content-wrapper">
           <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
 
-          <article class="features-items">
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-          </article>
+          <div class="features-items">
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+            </article>
+          </div>
 
-          <article class="features-items">
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
-              breakout rooms.</p>
-          </article>
+          <div class="features-items">
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
+                breakout rooms.</p>
+            </article>
+          </div>
 
-          <article class="features-items">
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">Private chef team providing on demand meals - just like your team
-              kitchen.</p>
-          </article>
+          <div class="features-items">
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Private chef team providing on demand meals - just like your team
+                kitchen.</p>
+            </article>
+          </div>
 
-          <article class="features-items">
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from
-              bungalow.</p>
-          </article>
+          <div class="features-items">
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from
+                bungalow.</p>
+            </article>
+          </div>
 
-          <article class="features-items">
-            <div class="features-items">
+          <div class="features-items">
+            <article>
               <p class="fontawesome-icon"></p>
               <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all
                 get
                 a chance to reset.</p>
-          </article>
+            </article>
+          </div>
 
-          <article class="features-items">
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-          </article>
+          <div class="features-items">
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+            </article>
+          </div>
 
         </div><!-- features content wrapper ends -->
       </section>
@@ -132,8 +147,9 @@
           <div class="contact">
             <h4>Contact</h4>
             <address>
-              <a href="tel:+15555555555">(555) 555-5555</a><br>
-              <a href="malito:hello@unplugged.com">hello@unplugged.com</a>
+              <p><a href="tel:+15555555555">(555) 555-5555</a><br>
+                <a href="malito:hello@unplugged.com">hello@unplugged.com</a>
+              </p>
             </address>
           </div>
 
@@ -148,11 +164,11 @@
 
         </div><!-- footer contact info ends here -->
 
-        <div class="copyright">
+      </div><!-- footer content-wrapper ends -->
+
+      <div class="copyright">
           <p>&copy 2023 | Unplugged</p>
         </div>
-
-      </div><!-- footer content-wrapper ends -->
 
     </footer>
 
