--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@
 
     <header>
       <div class="content-wrapper">
-        <a href="#"><img src="" alt="unplugged logo"></a>
+        <a href="../index.html"><img src="" alt="unplugged logo"></a>
 
         <div class="header-divider"></div>
 
@@ -43,14 +43,16 @@
     <main>
       <section class="mission">
         <div class="content-wrapper">
+          <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+
           <div class="mission-content">
-            <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna
               aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-              facilisis.
+              facilisis.</p>
 
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna
               aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
               facilisis.
@@ -67,22 +69,24 @@
     </section>
 
     <section class="contact-section">
+
       <div class="content-wrapper">
         <h2>Contact us, because you all need this.</h2>
 
-        <address>
-          <h4>General Information</h4>
-          <p>333 Main St, Lake Geneva, WI 53147<br>
-            555-555-5555<br>
-            hello@unplugged.com</p>
-        </address>
+        <div class="contact-content">
+          <address>
+            <h4>General Information</h4>
+            <p>333 Main St, Lake Geneva, WI 53147<br>
+              555-555-5555<br>
+              hello@unplugged.com</p>
+          </address>
 
-
-        <address>
-          <h4>Chat with a Facilitator</h4>
-          <p>555-555-5556<br>
-            facilitator@unplugged.com</p>
-        </address>
+          <address>
+            <h4>Chat with a Facilitator</h4>
+            <p>555-555-5556<br>
+              facilitator@unplugged.com</p>
+          </address>
+        </div>
 
       </div><!-- contact content wrapper ends -->
     </section>
@@ -96,8 +100,9 @@
           <div class="contact">
             <h4>Contact</h4>
             <address>
-              <a href="tel:+15555555555">(555) 555-5555</a>
-              <a href="malito:hello@unplugged.com">hello@unplugged.com</a>
+              <p><a href="tel:+15555555555">(555) 555-5555</a><br>
+                <a href="malito:hello@unplugged.com">hello@unplugged.com</a>
+              </p>
             </address>
           </div>
 
@@ -112,11 +117,11 @@
 
         </div><!-- footer contact info ends here -->
 
-        <div class="copyright">
-          <p>&copy 2023 | Unplugged</p>
-        </div>
-
       </div><!-- footer content-wrapper ends -->
+
+      <div class="copyright">
+        <p>&copy 2023 | Unplugged</p>
+      </div>
 
     </footer>
 
