--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <header>
       <div class="content-wrapper">
-        <figure><a href="#"><img src="" alt="unplugged logo"></a></figure>
+        <figure><a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a></figure>
 
         <div class="header-divider"></div>
 
@@ -125,18 +125,20 @@
         <div class="content-wrapper">
           <h2>Be a better team in 5 days, like this one.</h2>
 
+          <div class="reviews-content">
+
+          <figure><img src="img/unplugged-retreat-lacrue.jpg" alt="LaCrue team photo"></figure>
+
           <article>
-            <img src="" alt="">
-
-            <h3>LaCrue Bottling Co. October 2018
-            </h3>
-
+            <h3>LaCrue Bottling Co. October 2018</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna
               aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis
               aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
           </article>
+
+          </div>
 
         </div><!-- reviews content wrapper ends -->
       </section>
