Updated and added remaining styles on all pages

--- a/faq/index.html
+++ b/faq/index.html
@@ -16,8 +16,13 @@
     <link rel="apple-touch-icon" href="../icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/main.css">
+  <!-- css links -->
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
+  
+  <!-- font links -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
 
     <meta name="theme-color" content="#fafafa">
   </head>
@@ -27,7 +32,7 @@
 
     <header>
       <div class="content-wrapper">
-        <a href="../index.html"><img src="" alt="unplugged logo"></a>
+        <figure><a href="../index.html"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a></figure>
 
         <div class="header-divider"></div>
 
