--- a/about/index.html
+++ b/about/index.html
@@ -16,8 +16,12 @@
     <link rel="apple-touch-icon" href="../icon.png">
     <!-- Place favicon.ico in the root directory -->
 
+    <!-- css links -->
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/main.css">
+    
+    <!-- font links -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
     <meta name="theme-color" content="#fafafa">
   </head>
@@ -26,7 +30,7 @@
 
     <header>
       <div class="content-wrapper">
-        <a href="../index.html"><img src="" alt="unplugged logo"></a>
+        <figure><a href="../index.html"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a></figure>
 
         <div class="header-divider"></div>
 
