--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 
+    <!-- icon link -->
+    <script src="https://kit.fontawesome.com/5136b70ca4.js" crossorigin="anonymous"></script>
+
     <!-- font links -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
@@ -77,14 +80,14 @@
 
           <div class="features-items">
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon"><i class="fa-solid fa-campground"></i></p>
               <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
             </article>
 
 
 
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon"><i class="fa-solid fa-bed"></i></p>
               <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
                 breakout rooms.</p>
             </article>
@@ -92,7 +95,7 @@
 
 
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon"><i class="fa-solid fa-utensils"></i></p>
               <p class="features-item-description">Private chef team providing on demand meals - just like your team
                 kitchen.</p>
             </article>
@@ -100,7 +103,7 @@
 
 
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon"><i class="fa-solid fa-shoe-prints"></i></p>
               <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from
                 bungalow.</p>
             </article>
@@ -108,7 +111,7 @@
 
 
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon"><i class="fa-solid fa-face-smile-beam"></i></p>
               <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all
                 get
                 a chance to reset.</p>
@@ -117,7 +120,7 @@
 
 
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon"><i class="fa-solid fa-wifi"></i></p>
               <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
             </article>
           </div>
