Added and style icons on all necessary pages

--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
 
           <div class="reviews-content">
 
-          <figure><img src="img/unplugged-retreat-lacrue.jpg" alt="LaCrue team photo"></figure>
+            <figure><img src="img/unplugged-retreat-lacrue.jpg" alt="LaCrue team photo"></figure>
 
-          <article>
-            <h3>LaCrue Bottling Co. October 2018</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna
-              aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis
-              aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-          </article>
+            <article>
+              <h3>LaCrue Bottling Co. October 2018</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            </article>
 
           </div>
 
@@ -168,9 +168,14 @@
           <div class="social">
             <h4>Social</h4>
             <div class="social-icons">
-              <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener">Fb</a></p>
-              <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener">Tw</a></p>
-              <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener">IG</a></p>
+              <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"><i
+                    class="fa-brands fa-facebook"></i></a></p>
+
+              <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"><i
+                    class="fa-brands fa-square-x-twitter"></i></a></p>
+
+              <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"><i
+                    class="fa-brands fa-instagram"></i></a></p>
             </div>
           </div>
 
