--- a/about/index.html
+++ b/about/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/main.css">
 
+    <!-- icon link -->
+    <script src="https://kit.fontawesome.com/5136b70ca4.js" crossorigin="anonymous"></script>
+
     <!-- font links -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
@@ -120,9 +123,14 @@
           <div class="social">
             <h4>Social</h4>
             <div class="social-icons">
-              <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener">Fb</a></p>
-              <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener">Tw</a></p>
-              <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener">IG</a></p>
+              <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"><i class="fa-brands fa-facebook"></i></a>
+              </p>
+              
+              <p><a href="https://www.twitter.com/yoursite" target="_blank" rel="noopener"><i
+                    class="fa-brands fa-square-x-twitter"></i></a></p>
+              
+              <p><a href="https://www.instagram.com/yoursite" target="_blank" rel="noopener"><i
+                    class="fa-brands fa-instagram"></i></a></p>
             </div>
           </div>
 
